changed featured project

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@
 
     <div class="hero">
         <div class="content">
-            <h1 class="stagger1">Beautifully Crafted Software Experiences</h1>
+            <h1 class="stagger1">Hello, I'm Jared</h1>
             <div class="meet stagger1">
                 <span>👇</span>
-                <p>Meet Jared Zwick</p>
+                <p>Check out my work</p>
             </div>
             <svg class="scroll stagger1" width="40" height="77" viewBox="0 0 40 77">
                 <g id="scroll" transform="translate(-253 -787)">
@@ -71,10 +71,12 @@
                 <p class="subtitle">Featured Project</p>
                 <a href="#" class="featured-title">Virtual Marketplace</a>
 
-                <p class="featured-desc">This is my Marketplace App created with Flask and Python to facilitate virtual trade</p>
+                <p class="featured-desc">This is my automated marketing system for dealerships. Contains automated
+                web services by giving users the ability to upload inventory data, manage content posts, and
+                automate customer outreach</p>
             </div>
         </div>
-        <img class="right transition2" src="{{url_for('static', filename='images/vm3.PNG')}}" alt="featured project">
+        <img class="right transition2" src="{{url_for('static', filename='images/enzodealerboard.PNG')}}" alt="featured project">
     </section>
 
     <section class="skills">
