Fixed skills to say what the site is about

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -14,6 +14,8 @@ ul {
 
 a {
   text-decoration: none;
+  font-size:1.6rem;
+  font-weight:750;
 }
 
 img {
@@ -129,18 +131,21 @@ section {
   margin-top: -.4em;
   display: block;
 }
+a{
 
+}
 .featured-desc {
   color: #3B3B3B;
   margin-bottom: 3em;
-  font-weight: 500;
-  font-size: .85em;
+  font-weight: 550;
+  font-size: 1.85em;
   line-height: 1.8em;
 }
 
 .skills {
-  background-color: #38A3A5;
-  opacity: .9;
+  background-color: #E8F6EF;
+  margin-top:0em !important;
+  margin-bottom: 0em !important;
 }
 
 .skills-container ul li {
@@ -172,6 +177,7 @@ section {
 
 .skills-container ul li .skill-title {
   font-weight: bold;
+  font-size: 2.3rem;
 }
 
 .skills-container ul li featured-desc {
@@ -357,4 +363,3 @@ section {
             transform: translate(262px, 830px);
   }
 }
-/*# sourceMappingURL=main.css.map */
